# tyrex

./: .gitignore  CHANGELOG.md  README.md  checksum-Elixir.Tyrex.Native.exs  mix.exs
.github/workflows/: ci.yml  release.yml
bench/: concurrency_bench.exs  eval_bench.exs  startup_bench.exs
examples/: basic.exs  data_processing.exs  data_processing.js  pool.exs
examples/phoenix_ssr/: server.js  ssr_example.exs
lib/: tyrex.ex
lib/tyrex/: error.ex  inline.ex  native.ex  pool.ex  runtime.ex  sigil.ex
lib/tyrex/pool/: strategy.ex
lib/tyrex/pool/strategy/: hash.ex  random.ex  round_robin.ex
native/tyrex/: Cargo.toml  Cross.toml  Dockerfile.aarch64-unknown-linux-gnu
native/tyrex/.cargo/: config.toml
native/tyrex/extension/: main.js
native/tyrex/src/: atoms.rs  error.rs  lib.rs  runtime.rs  runtimes.rs  tokio_runtime.rs  util.rs  worker.rs
scripts/: docker-build.sh
test/: tyrex_permissions_test.exs  tyrex_pool_test.exs  tyrex_sigil_test.exs  tyrex_strategy_test.exs  tyrex_test.exs
test/support/: async_module.js  greeter.ts  import_a.js  import_b.js  main_module.js  math_utils.js  node_apis.js  read_file.txt  server.js  syntax_error.js
