[dependencies]
deno_core = "0.391.0"
deno_fs = "0.148.0"
deno_resolver = "0.69.0"
deno_runtime = { version = "0.246.0", features = ["transpile"] }
rustler = "0.36.0"
serde = "1.0"
serde_json = "1.0"
serde_v8 = "0.300.0"
slab = "0.4.9"
sys_traits = "=0.1.24"
tokio = "1.47.1"

[target.'cfg(target_os = "macos")'.dependencies]
libffi-sys = { version = "=4.1.0", features = ["system"] }

[lib]
crate-type = ["cdylib"]
name = "tyrex"
path = "src/lib.rs"

[package]
edition = "2021"
name = "tyrex"
version = "0.2.0"
